--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'HalvarBreit';
-  src: url('../mines/resource/HalvarBreit-RG.woff2') format('woff2');
+  src: url('HalvarBreit-RG.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
@@ -77,7 +77,7 @@ html, body{
     width: 445px;
     height: 100%;
     background-size: cover;
-    background-image: url("resource/background.png");
+    background-image: url("background.png");
     position: absolute;
     z-index: -1;
   }
