--- a/style.css
+++ b/style.css
@@ -411,3 +411,39 @@ html, body{
     transform: translateX(0) scale(1);
   }
 }
+.start-screen {
+  position: absolute;
+  z-index: 999;
+  width: 100vw;
+  height: 100vh;
+  background-color: #090e1d;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.start-screen input {
+  padding: 10px;
+  font-size: 18px;
+  width: 250px;
+  text-align: center;
+  border-radius: 8px;
+  border: none;
+}
+
+.start-screen button {
+  padding: 12px 24px;
+  font-size: 18px;
+  background: linear-gradient(93.73deg, #108de7, #0855c4);
+  border: none;
+  border-radius: 8px;
+  color: white;
+  cursor: pointer;
+}
+
+.container {
+  display: none; /* изначально скрыта */
+}
