--- a/style.css
+++ b/style.css
@@ -447,3 +447,17 @@ html, body{
 .container {
   display: none; /* изначально скрыта */
 }
+.spinner {
+  border: 5px solid rgba(255, 255, 255, 0.2);
+  border-top: 5px solid #00ffe1; /* Цвет передней части */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  margin: 20px auto;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
