--- a/style.css
+++ b/style.css
@@ -448,11 +448,11 @@ html, body{
   display: none; /* изначально скрыта */
 }
 .spinner {
-  border: 5px solid rgba(255, 255, 255, 0.2);
-  border-top: 5px solid #00ffe1; /* Цвет передней части */
+  border: 6px solid rgba(255, 255, 255, 0.2);
+  border-top: 6px solid #00ffe1;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   animation: spin 1s linear infinite;
   margin: 20px auto;
 }
@@ -461,3 +461,4 @@ html, body{
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
