--- a/style.css
+++ b/style.css
@@ -33,14 +33,15 @@ html, body{
   }
   
   .container {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index: 5;
+  display: none; /* скрыта по умолчанию */
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 5;
+}
   }
   @media (max-height: 800px) {
     .container{
