--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ body {
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
+  padding-bottom: 25vh;
   flex-direction: column;
   z-index: 10;
   background-color: #090e1d;
