--- a/style.css
+++ b/style.css
@@ -42,11 +42,11 @@ body {
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   padding-bottom: 25vh;
   flex-direction: column;
   z-index: 10;
-  background-color: #090e1d;
+  background-color: 0;
 }
 
 .verification-content {
